<resources>
    <!-- General -->
    <string name="app_name">Wirtualna Apteczka</string>
    <string name="amount">Ilość</string>
    <string name="created_at">Data dodania</string>
    <string name="due_date">Data ważności</string>
    <string name="information_medicine">Informacje o leku</string>
    <string name="list_medicines">Lista leków</string>
    <string name="config">ustawienia</string>
    <string name="not_specified">Nie podano</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="camera_required">Brak wymaganych uprawnień dla aplikacji by zrobić zdjęcie.</string>
    <string name="sort">sortowanie</string>

    <!-- Main activity layout -->
    <string name="add_medicine">Dodaj lek</string>
    <string name="my_list_medicine">Moja lista leków</string>
    <string name="family">Rodzina</string>
    <string name="last_added">Ostatnio używane:</string>
    <string name="not_searched_yet">Nie wyszukiwałeś jeszcze żadnego leku</string>
    <string name="log_out_popup_msg">Czy na pewno chcesz się wylogować?</string>
    <string name="log_out">wyloguj</string>
    <string name="available_soon">Dostępne wkrótce!</string>

    <!-- Add medicine layout -->
    <string name="general_info">Informacje ogólne</string>
    <string name="product_name">Nazwa leku</string>
    <string name="pack">Opakowanie</string>
    <string name="medicine_type">Postać leku</string>
    <string name="medicine_quantity_in_pack">Ilość leku w opakowaniu</string>
    <string name="additional">Dodatkowo</string>
    <string name="photo">Zdjęcie</string>
    <string name="notes">Notatki</string>
    <string name="medicine_share">Udostępnij rodzinie</string>
    <string name="medicine_added_msg">Lek został zapisany.</string>
    <string name="medicine_updated_msg">Zapisano zmiany.</string>
    <string name="start_write">zacznij pisać...</string>
    <string name="delete">usuń</string>
    <string name="speech_prompt">Powiedz coś...</string>
    <string name="speech_not_supported">Przykro nam, ale twoje urządzenie nie obsługuje rozpoznawania mowy.</string>
    <string name="choose_action">Co chcesz zrobić?</string>
    <string name="view_medicine_photo">Wyświetl zdjęcie</string>
    <string name="take_new_photo">Zrób nowe</string>

    <!-- Medicine List layout -->
    <string name="medicine_list_empty">Nie znaleziono żadnych leków.</string>
    <string name="share">udostępniony</string>
    <string name="pills">tabletki</string>
    <string name="quantity">ilość</string>
    <string name="date_add">data dodania:</string>
    <string name="date_expiration">data ważności:</string>
    <string name="shared_medicine">udostępniony</string>
    <string name="private_medicine">prywatny</string>
    <string name="details">szczegóły</string>

    <!-- Medicine Types -->
    <string name="type">Typ</string>
    <string name="pill">Tabletki</string>
    <string name="syrup">Syrop</string>
    <string name="sachet">Saszetki</string>
    <string name="spray">Spray</string>
    <string name="other">Inny</string>

    <!-- Medicine Quantity Suffix -->
    <string name="pieces">szt.</string>
    <string name="milliliter">ml</string>

    <!--Start layout-->
    <string name="welcome">Witamy!</string>
    <string name="first_time_welcome_msg">Cieszymy się, że wybrałeś naszą aplikację do zarządzania swoją domową apteczką.</string>
    <string name="create_account">Utwórz konto</string>
    <string name="log_in">Zaloguj</string>
    <string name="lets_go">Zaczynajmy!</string>

    <!--Login layout-->
    <string name="log_in_app">Logowanie</string>
    <string name="facebook">Zaloguj się przez Facebook</string>
    <string name="gmail">Zaloguj się przez konto Google</string>
    <string name="email">Email</string>
    <string name="pass">Hasło</string>
    <string name="required_fields">*pola obowiazkowe</string>
    <string name="save_data">Zapamiętaj moje dane</string>
    <string name="log_in_2">Zaloguj się!</string>
    <string name="register">Zarejestruj się</string>
    <string name="forgotten">Zapomniałeś hasła?</string>
    <string name="sign_accept">Logując się akceptujesz </string>
    <string name="regulations">Regulamin</string>
    <string name="or">lub</string>
    <string name="remember_me">Zapamiętaj mnie</string>
    <string name="insufficient_permissions">Brak wymaganych zezwoleń do poprawnego działania aplikacji.</string>

    <!--Registration layout-->
    <string name="registration">Rejestracja</string>
    <string name="repeat_pass">Powtórz hasło</string>
    <string name="registration_accept">Rejestrujac się akceptujesz </string>
    <string name="surname">Nazwisko</string>
    <string name="username">Nazwa użytkownika</string>

    <!-- Notes Dialog Box -->
    <string name="notes_message">Proszę podać notatki dotyczące leku.</string>
    <string name="save_btn_text">Zapisz</string>
    <string name="back_btn_text">Wróć</string>

    <!-- Edit amount Dialog Box -->
    <string name="edit_amount">Edytuj ilość</string>
    <string name="confirm_btn">Zatwierdź</string>
    <string name="cancel_btn">Anuluj</string>

    <!-- Delete medicine Dialog Box -->
    <string name="delete_medicine">Usuń lek</string>
    <string name="delete_medicine_msg">Czy na pewno chcesz usunąć ten lek?</string>

    <!-- Search medicine Dialog Box -->
    <string name="search_medicine_msg">Znajdź lek</string>
    <string name="search">Szukaj</string>
    <string name="go_back">Wróć</string>

    <!-- Validation error messages -->
    <string name="name_cannot_be_empty_msg">Proszę uzupełnić nazwę leku.</string>
    <string name="type_cannot_be_empty_msg">Proszę wybrać poprawny typ leku.</string>
    <string name="amount_cannot_be_empty_msg">Proszę podać ilość leku w opakowaniu.</string>

    <!-- Family layout -->
    <string name="family_list_empty">Nie masz dodanej żadnej osoby.</string>
    <string name="medicines_my">Leki, które ja udostępniam</string>
    <string name="medicines_share_me">Leki udostęnione dla mnie</string>
    <string name="medicines_my_family">Lista leków</string>
    <string name="contacts">Kontakty</string>
    <string name="invitations">Zaproszenia</string>
    <string name="contacts_list_empty">Nie masz dodanych kontaktów.</string>
    <string name="belongs_to">należy do:</string>
    <string name="invitation_contacts_list_empty">Brak oczekujących zaproszeń.</string>
    <string name="send_invitation_dialog_title">Wyślij zaproszenie do członka rodziny</string>
    <string name="send_invitation_btn_msg">Wyślij zaproszenie</string>
    <string name="invalid_email_msg">Nieprawidłowy adres e-mail.</string>
    <string name="user_has_been_invited">Zaproszenie zostało wysłane.</string>
    <string name="user_with_given_email_not_exists">Użytkownik o podanym adresie e-mail nie istnieje.</string>
    <string name="username_info">Użytkownik</string>
    <string name="delete_family_member_msg">Czy na pewno chcesz usunąć tego użytkownika z listy swoich kontaktów?</string>

    <!-- Registration layout -->
    <string name="username_empty_err_msg">Proszę podać nazwę użytkownika.</string>
    <string name="last_name_empty_err_msg">Proszę podać nazwisko.</string>
    <string name="email_empty_err_msg">Proszę podać email.</string>
    <string name="password_empty_err_msg">Proszę podać hasło.</string>
    <string name="password_length_err_msg">Hasło musi się składać z przynajmniej 6 znaków.</string>
    <string name="repeat_password_empty_err_msg">Proszę powtórzyć hasło.</string>
    <string name="incorrect_passwords_err_msg">Hasła muszą się zgadzać.</string>

    <!--Forget the password layout-->
    <string name="reminder">Przypomnienie hasła</string>
    <string name="not_remember_1">Jeżeli nie pamiętasz swojego hasła, podaj nam swój adres mailowy w celu jego zresetowania.</string>
    <string name="not_remember_2">Po kliknięciu \"Zresetuj\" na Twój adres mailowy zostanie wysłany mail z dalszą instrukcją.</string>
    <string name="reset">Zresetuj</string>
    <string name="empty_email_err_msg">E-mail nie może być pusty.</string>
    <string name="remind_password_email_sent">Wiadomość z instrukcjami odnośnie resetowania hasła została wysłana na podany e-mail.</string>

    <!-- Preview photo layout -->
    <string name="back">Wróć</string>
    <string name="medicine_photo">Zdjęcie leku</string>

    <!-- popup sort list -->
    <string name="sort_medicines">Sortowanie</string>
    <string name="sort_name_A_Z">Nazwa: od A do Z</string>
    <string name="sort_name_Z_A">Nazwa: od Z do A</string>
    <string name="sort_due_date_descending">Data ważności: od najnowszej</string>
    <string name="sort_due_date_ascending">Data ważności: od najstarszej</string>
    <string name="sort_date_created_descending">Data dodania: od najnowszej</string>
    <string name="sort_date_created_ascending">Data dodania: od najstarszej</string>
    <string name="sort_modified_date_descending">Data modyfikacji: od najnowszej</string>
    <string name="sort_modified_date_ascending">Data modyfikacji: od najstarszej</string>

    <!-- Authentication -->
    <string name="authentication_failed">Autentykacja się nie powiodła.</string>
    <string name="invalid_email_or_password">Nieprawidłowy email lub hasło.</string>
    <string name="empty_email_or_password_msg">Proszę uzupełnić email i hasło.</string>
    <string name="user_not_registered">Nie udało się utworzyć nowego użytkownika.</string>
    <string name="user_registered">Użytkownik został pomyślnie stworzony..</string>
    <string name="email_not_verified">Podany e-mail nie został jeszcze zweryfikowany.</string>
    <string name="verification_email_sent">Link weryfikacyjny został wysłany na podany e-mail</string>

    <!-- For facebook -->
    <string name="facebook_app_id">761655134044259</string>
    <string name="fb_login_protocol_scheme">fb761655134044259</string>
</resources>
