<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/AppTheme.Background"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_username_text"
            style="@style/MyEditText"
            android:layout_weight="1"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/register_email_text"
            style="@style/MyEditText"
            android:layout_weight="1"
            android:hint="@string/email"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/register_password_text"
            style="@style/MyEditText"
            android:layout_weight="1"
            android:hint="@string/pass"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/register_password_repeat_text"
            style="@style/MyEditText"
            android:layout_weight="1"
            android:hint="@string/repeat_pass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/register_new_user_btn"
            style="@style/MyButton"
            android:layout_marginTop="40dp"
            android:text="@string/register" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/registration_accept"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/register_regulations_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/regulations"
                android:textColor="@color/color_primary"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>