<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/AppTheme.Background"
        android:orientation="vertical">


        <Button
            style="@style/MyButton"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/facebook"
            android:drawableLeft="@drawable/facebook"
            android:text="@string/facebook" />

        <Button
            android:id="@+id/button2"
            style="@style/MyButton"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/my_button"
            android:drawableLeft="@drawable/google"
            android:text="@string/gmail"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="lub"
            android:textSize="24sp" />

        <EditText
            style="@style/MyEditText"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:hint="@string/email"
            android:inputType="textPersonName" />

        <EditText
            style="@style/MyEditText"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:hint="@string/pass"
            android:inputType="textPersonName" />

        <Button
            style="@style/MyButton"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/log_in" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="left"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/register"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/forgotten"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"

                android:text="@string/sign_accept"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/regulations"
                android:textColor="@color/color_primary"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>