<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true"
            > <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  style="@style/AppTheme.Background"
                  android:orientation="vertical" android:descendantFocusability="beforeDescendants"
                  android:focusableInTouchMode="true" >>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="fill"
            android:layout_weight="1"
            android:text="@string/not_remember_1"
            android:textSize="20sp"
            android:paddingTop="20dp"
            />

        <EditText
                style="@style/MyEditText"
                android:layout_weight="0.5"
                android:hint="@string/email"
                android:inputType="textPersonName"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="fill"
            android:layout_weight="1"
            android:text="@string/not_remember_2"
            android:textSize="20sp"
            />


        <Button
                style="@style/MyButton"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/reset"
                />


    </LinearLayout>
</ScrollView>