<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/AppTheme.Background"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical">>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.45"
            android:gravity="fill"
            android:lineSpacingExtra="8sp"
            android:lines="4"
            android:paddingTop="20dp"
            android:text="@string/not_remember_1"
            android:textSize="20sp" />

        <EditText
                style="@style/MyEditText"
                android:layout_weight="0.46"
                android:hint="@string/email"
                android:inputType="textPersonName" android:id="@+id/remind_password_email"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.87"
            android:gravity="fill"
            android:lineSpacingExtra="8sp"
            android:lines="3"
            android:paddingTop="20dp"
            android:text="@string/not_remember_2"
            android:textSize="20sp"

            />


        <Button
                style="@style/MyButton"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/reset" android:id="@+id/remind_password_btn"/>


    </LinearLayout>
</ScrollView>