<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/medicine_simple_item_panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="horizontal"
    android:padding="10dp">


    <LinearLayout
        android:id="@+id/text_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/family_medicine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:paddingBottom="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Witamina C" />


        <TextView
            android:id="@+id/family_medicine_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:duplicateParentState="true"
            tools:text="@string/pills" />

        <TextView
            android:id="@+id/family_medicine_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:duplicateParentState="true"
            tools:text="@string/quantity" />

        <TextView
            android:id="@+id/family_medicine_duedate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:duplicateParentState="true"
            tools:text="@string/date_expiration" />

        <TextView
            android:id="@+id/family_medicine_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:text="@string/belongs_to" />


    </LinearLayout>

    <ImageView
        android:id="@+id/medicine_simple_item_thumbnail"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_gravity="center"
        android:minHeight="@android:dimen/app_icon_size"
        android:minWidth="@android:dimen/app_icon_size"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/icon_no_photo" />

</LinearLayout>