<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme.Background"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="tutaj będzie lista rodziny" />

        <ListView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />


        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/family_list_empty"
            android:textSize="18sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">


        <Button
            style="@style/MyButton"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:text="@string/medicines_my" />

        <Button
            style="@style/MyButton"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/medicines_share_me"

            />

    </LinearLayout>
</LinearLayout>